XWIKI-1880: Exception in the console when editing groups using the new UI Fixed.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki-platform/skins/trunk@7094 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/javascript.vm
+++ b/src/main/resources/albatross/javascript.vm
@@ -9,7 +9,7 @@
 <script type="text/javascript" src="$xwiki.getSkinFile("fullscreenEdit.js", true)"></script>
 <script type="text/javascript" src="$xwiki.getSkinFile("usersandgroups.js", true)"></script>
 <script type="text/javascript" src="$xwiki.getSkinFile("suggest/ajaxSuggest.js")"></script>
-<script type="text/javascript" src="$xwiki.getSkinFile("scripts/lightbox/lightbox.js")"></script>
+<script type="text/javascript" src="$xwiki.getSkinFile("scripts/lightbox/lightbox.js", true)"></script>
 
 #if(($context.action=="inline")||($context.action=="edit") || ($context.action=="admin"))
 <script type="text/javascript">
