XSALBATROSS-2: Doc already exists returns wrong HTTP status code Fixed.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki-platform/skins/trunk@7275 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/docalreadyexists.vm
+++ b/src/main/resources/albatross/docalreadyexists.vm
@@ -2,6 +2,7 @@
 ### Document already exists message
 ###
 ###
+$response.setStatus(409)
 #template("startpage.vm")
 <div class="main layoutsubsection">
 #if($xwiki.exists("XWiki.DocumentAlreadyExist"))
