XWIKI-2030: In the user tab on the administration page the dialog box when deleting a user should be modified XWIKI-2039: Creating a group with the name of an existing page should generate an error Fixed (skin part). Patch submitted by Evelina Slatineanu, applied without changes.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki-platform/skins/trunk@7281 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/addnewgroup.vm
+++ b/src/main/resources/albatross/addnewgroup.vm
@@ -1,9 +1,9 @@
 <div id="addnewgroup">
-<span style="padding-left:13px;">Create new group </span>
-<form method="post">
+<span style="padding-left:13px;">$msg.get("rightsmanager.createnewgroup")</span>
+<form method="post" onsubmit="return false;">
 <div>
-<span style="padding-left:13px;"><input type="text" name="newgroup" value="" /></span>
-<span class="buttonwrapper"><input class="button" type="submit" value="Create Group" onclick="new Ajax.Request('$xwiki.getURL("XWiki.__groupname__", "save", "template=XWiki.XWikiGroupTemplate")'.replace('__groupname__', this.form.newgroup.value), {asynchronous: false}); window.lb.lbSaveForm();" /></span>
+<span style="padding-left:13px;"><input type="text" name="newgroup" value="" id="newgroupi" /></span>
+<span class="buttonwrapper"><input class="button" type="submit" value="$msg.get("rightsmanager.creategroup")" onclick="new Ajax.Request('$xwiki.getURL("XWiki.__groupname__", "save", "template=XWiki.XWikiGroupTemplate")'.replace('__groupname__', this.form.newgroup.value), { onFailure: function(transport) { alert('$msg.get("rightsmanager.groupexist")'.replace('__name__', $('newgroupi').value)); }, onSuccess: function(transport) { window.lb.lbSaveForm(); } });" /></span>
 <br />
 <span class="buttonwrapper"><input class="button" type="submit" name="formactioncancel" value="$msg.get("cancel")" onclick=" window.lb.lbHide(); window.lb.lbClearData(); return false;"/></span>
 </div>
