--- a/src/main/resources/albatross/edituser.vm
+++ b/src/main/resources/albatross/edituser.vm
@@ -21,6 +21,7 @@ $cdoc.getRenderedContent()
 #if($context.user == $doc.getFullName())
 $msg.get("rightsmanager.edituserprofile")&nbsp;&nbsp;<a href="$doc.getURL()">$msg.get("rightsmanager.userprofile")</a>
 #end
-<span class="buttonwrapper"><input class="button" type="submit" name="formactionsave" value="$msg.get("save")" onclick=" window.lb.lbSaveForm();"/></span>
-<span class="buttonwrapper"><input class="button" type="submit" name="formactioncancel" value="$msg.get("cancel")" onclick=" window.lb.lbHide(); window.lb.lbClearData(); return false;"/></span>
+<br /><br />
+<span><input class="button" type="submit" name="formactionsave" value="$msg.get("save")" onclick=" window.lb.lbSaveForm();"/></span>
+<span><input class="button" type="submit" name="formactioncancel" value="$msg.get("cancel")" onclick=" window.lb.lbHide(); window.lb.lbClearData(); return false;"/></span>
 </div>
