--- a/src/main/resources/albatross/stylesheets.vm
+++ b/src/main/resources/albatross/stylesheets.vm
@@ -28,5 +28,5 @@
 <link href="${request.contextPath}/yui/treeview/assets/tree.css" rel="stylesheet" type="text/css"/>
 <link href="$xwiki.getSkinFile("css/lightbox/lightbox.css", true)" rel="stylesheet" type="text/css" />
 <!--[if IE]>
-  <link href="$xwiki.getSkinFile("css/lightbox/lightboxIE.css", true)" rel="stylesheet" type="text/css" title="Lightbox Stylesheet For Ie" />
+  <link href="$xwiki.getSkinFile("css/lightbox/lightboxIE.css", true)" rel="stylesheet" type="text/css" />
 <![endif]-->
