XSALBATROSS-10: Accidentally reintroduced XWIKI-1749 Fixed.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki-platform/skins/trunk@7565 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/htmlheader.vm
+++ b/src/main/resources/albatross/htmlheader.vm
@@ -26,7 +26,7 @@
     #template("javascript.vm")
   </head>
   #if(($context.action=="inline")||($context.action=="edit") || ($context.action=="admin"))
-    <body onunload="cancelEdit();"
+    <body
           onload="prepareCancelEdit(); createColorPicker();" id="body" class="$context.database ${context.action}body #if($showLeftPanels == "0")hideleft#end#if($showRightPanels == "0")hideright#end#if($hidecolumns && ($!hidecolumns == 1))hidelefthideright#end">
   #else
     <body id="body" class="$context.database ${context.action}body #if($showLeftPanels == "0")hideleft#end#if($showRightPanels == "0")hideright#end#if($hidecolumns && ($!hidecolumns == 1))hidelefthideright#end">
