XSALBATROSS-11: Replacing style.css in the Administration doesn't work
* Will try to write a Selenium test for that too

git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki-platform/skins/trunk@7571 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/stylesheets.vm
+++ b/src/main/resources/albatross/stylesheets.vm
@@ -1,6 +1,6 @@
 ## The default stylesheet configuration option allows to override the default style.css CSS
 #set ( $defaultstyle = $xwiki.getWebPreference("stylesheet") )
-#if ( $defaultstyle != "" )
+#if ( $defaultstyle == "" )
   #set ( $defaultstyle = "style.css" )
 #end
 #set( $defaultStyleURL = $xwiki.getSkinFile($defaultstyle, true) )
