[cleanup] Minor fixes
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki-platform/skins/trunk@7667 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/chwmain.vm
+++ b/src/main/resources/albatross/chwmain.vm
@@ -31,8 +31,8 @@ $!xwiki.getWebPreference("meta")
 #template("chw/datapage.vm")
 #template("chw/typepage.vm")
 #template("chw/titlepage.vm")
-<!-- Not ready for prime time
-#template("chw/axispage.vm")-->
+## Not ready for prime time
+## #template("chw/axispage.vm")
       </td>
     </tr>
     <tr>
