XE-207: Replacement of Rico Accordion with Scriptaculous one Update albatross Patch submitted by Evelina Slatineanu, applied with changes
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki-platform/skins/trunk@8554 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/colorsblack.css
+++ b/src/main/resources/albatross/colorsblack.css
@@ -540,6 +540,7 @@ th{
   border: 1px solid #C0D4E7 !important;
   margin: 0px;
   padding: 0px;
+  overflow: auto !important;
 }
 .panel .accordionTabContentBox ul{
   margin: 4px;
