--- a/src/main/resources/albatross/screenlayout.css
+++ b/src/main/resources/albatross/screenlayout.css
@@ -733,7 +733,7 @@ span.pitemseparator{
 }
 /*
 ----------------------------------
-Rico Acordeon
+Scriptaculous Acordeon
 ----------------------------------
 */
 #xwikisyntaxhelp {
@@ -743,6 +743,10 @@ Rico Acordeon
   border: none;
 }
 
+.accordionTabContentBox {
+  overflow: hidden !important;
+}
+
 .accordionTabTitleBar h6{
   margin: 0px;
   padding: 0px 4px;
@@ -750,7 +754,7 @@ Rico Acordeon
 
 #editPanels .accordionTabContentBox{
   border: none;
-  overflow: auto;
+  overflow: auto !important;
 }
 
 #editPanels .accordionTabContentBox table{
@@ -797,6 +801,7 @@ td.label{
 }
 #xwikiclassproperties, #xwikiobjects{
   border: 1px solid #DDD !important;
+  overflow: hidden;
 }
 .center{
   text-align: center;
@@ -990,6 +995,11 @@ div.pagelayoutoptions td{
   padding: 3px 8px 3px 3px;
   overflow: auto;
 }
+
+#xwikieditcontent div{
+  overflow: hidden;
+}
+
 * html #xwikieditcontent{
   padding: 0px 3px 3px 3px;
 }
