XSALBATROSS-22 : On IE7 the combo box for selecting Objects is not large enough
Fixed.

git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki-platform/skins/branches/xwiki-skin-albatross-1.4@8713 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/presentation.css
+++ b/src/main/resources/albatross/presentation.css
@@ -179,6 +179,9 @@ Panels
 .panel input.panelinput, .panel select{
   width: 135px;
 }
+#editPanels .panel input.panelinput, #editPanels .panel select{
+  width: 200px;
+}
 #xwikiincludeddocuments .xwikibuttonlink a{
   padding: 2px 8px;
   margin-left: 8px;
