XE-221 : Change the table that displays all the documents (Main.AllDocs) to use ajax for more rapid loading XE-224 : Write selenium test to verify the behaviour of the AllDocs ajax table
Applied patch from Evelina with few modifications.

git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki-platform/skins/trunk@9235 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/usersandgroups.css
+++ b/src/main/resources/albatross/usersandgroups.css
@@ -1,7 +1,6 @@
 /* USERS SCROLLING SYSTEM */
-
 div.scrollbar {
-  overflow: auto;
+  overflow: auto !important;
   height: 250px;
   margin: 0px;
   padding: 0px;
@@ -78,7 +77,7 @@ div.inscrollbar {
 }
 
 
-#userstable, #groupstable, #usersandgroupstable {
+#userstable, #groupstable, #usersandgroupstable, #alldocstable {
   width: 100%;
   position: relative;
   left: 4px;
