XWIKI-2073 : Print and Print Preview only print the first printer page
Applied patch from Evelina without modification.

git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki-platform/skins/trunk@9359 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/print.css
+++ b/src/main/resources/albatross/print.css
@@ -1,6 +1,20 @@
-#body{
+#body, #xwikimaincontainer, #xwikimaincontainerinner, #xwikicontent {
+  background-image: none !important;
   background-color: #FFF !important;
+  float: none !important;
+  border: none !important;
+  width: auto !important;
+  margin: 0px !important;
+  padding: 10px !important;
+  overflow: visible !important;
 }
 .edit_section{
   display: none;
+}
+#printcontainer {
+	overflow: visible !important; 
+	border: none; 
+	padding: 10px; 
+	text-align: justify;
+	float: none !important;
 }
