[misc] Fix invalid CSS comment
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki-platform/skins/trunk@9776 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/wiki.css
+++ b/src/main/resources/albatross/wiki.css
@@ -334,7 +334,7 @@ ol.HEBREW { list-style-type: hebrew; }
  color: gray;
 }
 
-## Footnotes
+/* Footnotes */
 sup.footnoteRef a{
   font-weight: bold;
   text-decoration: none;
