XWIKI-2464: Align Section title levels with corresponding HTML H elements and remove the class attribute for section titles
XE-278:  Remove "heading-1*" class attribute for sections

XPWATCHLIST-30:  Remove "heading-1*" class attribute for sections

XSALBATROSS-33: Align Section title levels with corresponding HTML H elements and remove the class attribute for section titles

XSDODO-2:  Align Section title levels with corresponding HTML H elements and remove the class attribute for section titles

XSFINCH-8: Align Section title levels with corresponding HTML H elements and remove the class attribute for section titles

XSTOUCAN-42: Align Section title levels with corresponding HTML H elements and remove the class attribute for section titles

XWIKI-2568: Continue implementing the new Rendering Architecture
* Added support for ID generation for section titles
* Some small refactorings

git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki-platform/skins/trunk@11430 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/customcolors.css
+++ b/src/main/resources/albatross/customcolors.css
@@ -4,7 +4,7 @@ body#body{
 #csscolorproperty("color" "textcolor")
 }
 
-.heading-1, .heading-1-1, .heading-1-1-1, .heading-1-1-1-1 {
+h1, h2, h3, h4 {
 #csscolorproperty("color" "titlescolor")
 }
 
