--- a/src/main/resources/albatross/colorsblack.css
+++ b/src/main/resources/albatross/colorsblack.css
@@ -2,7 +2,7 @@
 	background-color: #4C5661;
 }
 
-.heading-1, .heading-1-1, .heading-1-1-1, .heading-1-1-1-1 {
+h1, h2, h3, h4 {
   color: #000;
 }
 
