--- a/src/main/resources/albatross/wiki.css
+++ b/src/main/resources/albatross/wiki.css
@@ -3,14 +3,13 @@
 	line-height: 1.1em;
 	margin: 0 0 30px 0;
 }
-.heading-1, .heading-1-1,
-.heading-1-1-1, .heading-1-1-1-1 {
+h1, h2, h3, h4 {
   color: #000;
   background-color: inherit;
   padding: 0;
 }
 
-.heading-1 {
+h1 {
   margin-top: 5px;
   font-size: 2.6em;
   line-height: 1.1em;
@@ -18,7 +17,7 @@
   padding-top: .85em;
   border-bottom: 0px solid;
 }
-.heading-1-1 {
+h2 {
   margin: 0px 0 15px 0;
   padding-top: 1em;
   border-bottom: 1px solid;
@@ -28,7 +27,7 @@
   line-height: 1.1em;
 }
 
-.heading-1-1-1 {
+h3 {
   font-weight: normal;
   font-size: 2em;
   line-height: 1.1em;
@@ -36,7 +35,7 @@
   padding-top: 1.1em;
 }
 
-.heading-1-1-1-1 {
+h4 {
   font-weight:normal;
   color: #404040;
   margin: -1em 0 0 0;
@@ -45,7 +44,7 @@
   font-size: 1.4em;
   line-height: 1.1em;
 }
-.heading-1-1-1-1-1 {
+h5 {
   font-weight:normal;
   color: #404040;
   font-style: normal;
@@ -56,7 +55,7 @@
   line-height: 1.1em;
 }
 
-.heading-1, .heading-1-1, .heading-1-1-1, .heading-1-1-1-1, .heading-1-1-1-1-1, .heading-1-1-1-1-1-1{
+h1, h2, h3, h4, h5, h6 {
   clear: both;
 }
 
