XWIKI-2606 :  Improve pages footer (comments, attachments, etc) XWIKI-522 : Add a Document Information section below the document
Implemented.

git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@11688 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/classes.css
+++ b/src/main/resources/albatross/classes.css
@@ -5,7 +5,15 @@
   clear: both;
 }
 .none, .hidden {
-  display: none;
+  display: none !important;
+}
+.invisible {
+	visibility: hidden !important;
+}
+.loading {
+    background-image: url(icons/spinner.gif);
+    background-position: center center;
+    background-repeat: no-repeat;
 }
 .currentspace{
   font-weight: 900;
