XWIKI-2335 : Printing without using the print template only prints the first page
Applied patch from Evelina Slatineanu with a small modification.

git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@11689 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/print.css
+++ b/src/main/resources/albatross/print.css
@@ -18,3 +18,15 @@
 	text-align: justify;
 	float: none !important;
 }
+#rightPanels, #leftPanels, #actionmenu {
+    display: none;
+}
+#globallinks {
+    display: none;
+}
+#headerspace {
+    margin:0 !important;
+}
+#contentcolumn .main {
+    margin:0 !important;
+}
