XWIKI-2697: The syntax for escaping wiki text ( {{{ ) triggers weird behavior XSALBATROSS-38: Wrong style for verbatim text when using the new rendering XSTOUCAN-50: Wrong style for verbatim text when using the new rendering
+ Removed two unused templates (diffall.vm and changesdocold.vm) that were using <pre> elements.

git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@12963 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/elements.css
+++ b/src/main/resources/albatross/elements.css
@@ -61,6 +61,9 @@ sup {}
 /* End of 9.2 */
 p {}
 pre {
+  font-family: "Arial", "Lucida", "Trebuchet MS", "Luxi Sans", "Helvetica", sans-serif;
+}
+pre.xwikierror {
   font-family: "Bitstream Vera Sans Mono", "Courier New", Monaco, Courier, monospace;  /* [3] */
   overflow: auto;
   background-color: #EEE;
@@ -133,6 +136,9 @@ applet {}
 /* Section 15: Alignment, font styles, and horizontal rules */
 /* 15.2: Fonts "[...] their use is discouraged in favor of style sheets." */
 tt {}
+tt.wikimodel-verbatim {
+  font-family: "Arial", "Lucida", "Trebuchet MS", "Luxi Sans", "Helvetica", sans-serif;
+}
 i {}
 b {}
 big {}
