XSALBATROSS-39: There is no proper CSS for <blockquote> in the Albatross skin
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@12998 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/wiki.css
+++ b/src/main/resources/albatross/wiki.css
@@ -59,6 +59,14 @@ h1, h2, h3, h4, h5, h6 {
   clear: both;
 }
 
+blockquote { 
+    padding: 0.3em 0 0 1em;
+    quotes: none;
+    background:#FAFAF6 none repeat scroll 0 0;
+    border-left:2px solid #DDDDCC;
+    display:block;
+}
+
 .quote {
   font-style: italic;
   color: inherit;
