--- a/src/main/resources/albatross/wiki.css
+++ b/src/main/resources/albatross/wiki.css
@@ -178,7 +178,7 @@ ol.ROMAN { list-style-type: upper-roman; }
 ol.alpha { list-style-type: lower-alpha; }
 ol.ALPHA { list-style-type: upper-alpha; }
 ol.greek { list-style-type: lower-greek; }
-ol.GREEK { list-style-type: lower-greek; }
+ol.GREEK { list-style-type: upper-greek; }
 /* Disabled until they become valid CSS (in 3.0)
 ol.hiragana { list-style-type: hiragana; }
 ol.HIRAGANA { list-style-type: hiragana-iroha; }
