XWIKI-2803: Do not render ? after non-existing page links as text XSALBATROSS-41: Add CSS rules for displaying wanted links with the new XHTML rendering XSTOUCAN-56: Add CSS rules for displaying wanted links with the new XHTML rendering XSTOUCAN-57: Make all wanted link question marks displayed in Orange for Panels
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@14290 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/wiki.css
+++ b/src/main/resources/albatross/wiki.css
@@ -207,6 +207,16 @@ ol.HEBREW { list-style-type: hebrew; }
   margin: 0px;
   margin-left: 3px;
 }
+
+/* Needed for the new rendering with XWiki Syntax 2.0 since we're now using CSS for
+   displaying the question mark for unknown links */
+span.wikicreatelink a {
+  text-decoration: underline;
+  color: black;
+  background:transparent url(qm-blue.png) no-repeat scroll right center;
+  padding-right:13px;
+}
+
 .wiki-calendar-table *{
   text-align: center;
   border-collapse: collapse;
