XWIKI-2850: Add error handling for new rendering * Replaced xwikierror with xwikirenderingerror since xwikierror is already used for something else
XSALBATROSS-42: Add CSS rule for displaying rendering errors
XSTOUCAN-58: Add CSS rule for displaying rendering errors


git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@14296 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/wiki.css
+++ b/src/main/resources/albatross/wiki.css
@@ -401,3 +401,10 @@ a.footnoteBackRef{
 .pagedNavigation .pagedLink a:hover{
   color: #D70 !important;
 }
+
+/* Used to signify a rendering error in the rendered page. Valid only with new rendering */
+.xwikirenderingerror {
+    background-color: #FF5555;
+    border: 1px #555555;
+    padding: 3px;
+}
