--- a/src/main/resources/albatross/wiki.css
+++ b/src/main/resources/albatross/wiki.css
@@ -75,6 +75,20 @@ blockquote {
   font-size: inherit;
 }
 
+.box {
+  margin-top: 4px;
+  margin-bottom: 4px;
+  padding: 5px 5px 5px 5px;
+  color: inherit;
+  background-color: #eeeeee;
+  border: 1px dotted #003366;
+  font-size: 12px;
+  line-height: 100%;
+  white-space: pre;
+  width: 70%;
+  overflow: auto;
+}
+
 .code {
   margin-top: 4px;
   margin-bottom: 4px;
