XSALBATROSS-45: The verbatim syntax print a graphical box
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@15071 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/elements.css
+++ b/src/main/resources/albatross/elements.css
@@ -47,6 +47,13 @@ strong {}
 dfn {}
 code {
   font-family: "Bitstream Vera Sans Mono", "Courier New", Monaco, Courier, monospace;  /* [3] */
+  overflow: auto;
+  background-color: #EEE;
+  border: 1px solid #DDD;
+  padding: 4px;
+}
+code pre {
+  font-family: "Bitstream Vera Sans Mono", "Courier New", Monaco, Courier, monospace;  /* [3] */
 }
 samp {}
 kbd {}
@@ -60,13 +67,6 @@ sub {}
 sup {}
 /* End of 9.2 */
 p {}
-pre {
-  font-family: "Bitstream Vera Sans Mono", "Courier New", Monaco, Courier, monospace;  /* [3] */
-  overflow: auto;
-  background-color: #EEE;
-  border: 1px solid #DDD;
-  padding: 4px;
-}
 ins {}
 del {}
 
