--- a/src/main/resources/albatross/style.css
+++ b/src/main/resources/albatross/style.css
@@ -233,3 +233,55 @@ div.panellayoutcontainer-1col,div.panellayoutcontainer-2col,div.panellayoutconta
 	margin-left: 6px;
 }
 
+/* 
+** Wiki items lists (spaces, pages, comments, attachments) 
+*/
+
+ul.xlist {
+  margin: 0 0 0 0.5em !important;
+  padding: 0 !important;
+}
+
+ul.xlist li.xunderline {
+  border-bottom: solid 1px #efefef !important;
+}
+
+ul.xlist li.xhighlight:hover {
+  background-color: lemonChiffon;
+}
+
+ul.xlist li {
+  width: 100% !important;
+  padding-top: 0.2em;
+  list-style-type: none;
+}
+
+ul.xlist li.space, ul.xlist li.page, ul.xlist li.comment, ul.xlist li.attachment {
+  background-repeat: no-repeat;
+  background-position: 2px 3px;
+}
+
+ul.xlist li.space {
+  background-image: url( ../../resources/icons/silk/folder.png );
+}
+
+ul.xlist li.page {
+  background-image: url( ../../resources/icons/silk/page_white_text.png );
+}
+
+ul.xlist li.comment {
+  background-image: url( ../../resources/icons/silk/comment.png );
+}
+
+ul.xlist li.attachment {
+  background-image: url( ../../resources/icons/silk/attach.png );
+}
+
+ul.xlist li.xitem div.xitemcontainer {
+  text-indent: 1.5em;
+}
+
+ul.xlist li.xitem div.xitemcontainer ul.xlist {
+  text-indent: 0em;
+}
+
