XSALBATROSS-54: Don't display the section edit icon/link in Toucan skin when showing the doc in print preview mode
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@18189 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/print.css
+++ b/src/main/resources/albatross/print.css
@@ -9,7 +9,7 @@
   overflow: visible !important;
 }
 .edit_section{
-  display: none;
+  display: none !important;
 }
 #printcontainer {
 	overflow: visible !important; 
