[misc] Fix xhtml validity
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@18318 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/presentation.css
+++ b/src/main/resources/albatross/presentation.css
@@ -261,7 +261,7 @@ span.messagetype{
   display: none;
 }
 
-fieldset.floatinginfobox{
+div.floatinginfobox, fieldset.floatinginfobox{
   width: 200px;
   float: right;
   border: 1px solid #333;
