XWIKI-2239: Differentiate the current version in the history table Adding styling. Patch submitted by Chathura Ganegoda, applied with changes.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@19296 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/xwiki.css
+++ b/src/main/resources/albatross/xwiki.css
@@ -111,3 +111,7 @@
     border: 1px solid;
     border-spacing: 10px;
 }
+#historyform .currentversion, #historyform .currentversion td {
+  background: #FFD;
+  font-weight: bold;
+}
